@@ -1,3 +1,8 @@
+2013-06-12  Sancho Lerena <slerena@artica.es>
+
+	* extensions/plugin_registration.php: Added link to file manager
+	to upload plugin files using the file manager.
+
 2013-06-12 Mario Pulido <mario.pulido@artica.es>
 	
 	* pandoradb.data.postgreSQL.sql,
